--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
 
   </div>
 <script>
-// JavaScript goes here.
+$(document).ready(function() {
+  // Code here will run when the page has loaded.
+  $('input[type=radio][name=fontname]').change(function(e) {
+    $('#canvas').css('font-family', e.target.value);
+  })
+
+
+
+});
 </script>
 </body>
 </html>
