implementing the textcolor changer

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@ $(document).ready(function() {
     $('#canvas').css('font-family', e.target.value);
   })
 
+  $('#textcolor').change(function(e) {
+    $('#canvas').css('color', e.target.value)
+  })
+
 
 
 });
