--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@ $(document).ready(function() {
   })
 
   $('#textcolor').change(function(e) {
-    $('#canvas').css('color', e.target.value)
+    $('#canvas').css('color', e.target.value);
+  })
+
+  $('#bgcolor').change(function(e) {
+    $('#canvas').css('background-color', e.target.value);
   })
 
 
