implementing the fontsize changer

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@ $(document).ready(function() {
     $('#canvas').css('background-color', e.target.value);
   })
 
+  $('#textsize').change(function(e) {
+    $('#canvas').css('font-size', e.target.value + 'px');
+  })
+
 
 
 });
