implementing lineheight and padding changers

--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@ $(document).ready(function() {
     $('#canvas').css('font-size', e.target.value + 'px');
   })
 
+  $('#lineheight').change(function(e) {
+    $('#canvas').css('line-height', e.target.value + 'px');
+  })
+
+  $('#textpadding').change(function(e) {
+    $('#canvas').css('padding', e.target.value + 'px');
+  })
+
+
+
 
 
 });
