--- a/index.html
+++ b/index.html
@@ -73,30 +73,33 @@
 
   </div>
 <script>
+
+var canvas = $('#canvas');
+
 $(document).ready(function() {
   // Code here will run when the page has loaded.
   $('input[type=radio][name=fontname]').change(function(e) {
-    $('#canvas').css('font-family', e.target.value);
+    canvas.css('font-family', e.target.value);
   })
 
   $('#textcolor').change(function(e) {
-    $('#canvas').css('color', e.target.value);
+    canvas.css('color', e.target.value);
   })
 
   $('#bgcolor').change(function(e) {
-    $('#canvas').css('background-color', e.target.value);
+    canvas.css('background-color', e.target.value);
   })
 
   $('#textsize').change(function(e) {
-    $('#canvas').css('font-size', e.target.value + 'px');
+    canvas.css('font-size', e.target.value + 'px');
   })
 
   $('#lineheight').change(function(e) {
-    $('#canvas').css('line-height', e.target.value + 'px');
+    canvas.css('line-height', e.target.value + 'px');
   })
 
   $('#textpadding').change(function(e) {
-    $('#canvas').css('padding', e.target.value + 'px');
+    canvas.css('padding', e.target.value + 'px');
   })
 
 
