--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
     h2 {
       font: bold 20px helvetica,arial,sans-serif;
     }
-    #canvas {
-      border: 1px dashed #000;
-      padding: 10px;
-      font: 16px/18px "times new roman",times,serif;
-    }
+    
     #controls {
       display: -webkit-flex;
       display: flex;
@@ -75,6 +71,10 @@
 <script>
 
 var canvas = $('#canvas');
+
+canvas.css('border', '1px dashed #000');
+canvas.css('padding', '10px');
+canvas.css('font', '16px/18px "times new roman",times,serif' );
 
 $(document).ready(function() {
   // Code here will run when the page has loaded.
