--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     h2 {
       font: bold 20px helvetica,arial,sans-serif;
     }
-    
+
     #controls {
       display: -webkit-flex;
       display: flex;
@@ -82,25 +82,26 @@ $(document).ready(function() {
     canvas.css('font-family', e.target.value);
   })
 
-  $('#textcolor').change(function(e) {
-    canvas.css('color', e.target.value);
+  $('#textcolor').keyup(function(e) {
+      canvas.css('color', e.target.value);
   })
 
-  $('#bgcolor').change(function(e) {
+  $('#bgcolor').keyup(function(e) {
     canvas.css('background-color', e.target.value);
   })
 
-  $('#textsize').change(function(e) {
+  $('#textsize').keyup(function(e) {
     canvas.css('font-size', e.target.value + 'px');
   })
 
-  $('#lineheight').change(function(e) {
+  $('#lineheight').keyup(function(e) {
     canvas.css('line-height', e.target.value + 'px');
   })
 
-  $('#textpadding').change(function(e) {
+  $('#textpadding').keyup(function(e) {
     canvas.css('padding', e.target.value + 'px');
   })
+
 
 
 
