added font Impact to the playfield

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <li><label><input type="radio" name="fontname" value="georgia"> Georgia</label></li>
           <li><label><input type="radio" name="fontname" value="times" checked> Times New Roman</label></li>
           <li><label><input type="radio" name="fontname" value="verdana"> Verdana</label></li>
+          <li><label><input type="radio" name="fontname" value="impact"> Impact</label></li>
         </ul>
       </div>
       <div class="control">
@@ -75,6 +76,19 @@ var canvas = $('#canvas');
 canvas.css('border', '1px dashed #000');
 canvas.css('padding', '10px');
 canvas.css('font', '16px/18px "times new roman",times,serif' );
+
+function validate() {
+  //validate textcolor
+  //validate background-color
+  //validate textsize
+  //validate lineheight
+  var lineHeight = $('#lineheight').val();
+  if (lineHeight = NaN) {
+    alert("Invalid input, please insert a number");
+  }
+  //validate padding
+
+}
 
 $(document).ready(function() {
   // Code here will run when the page has loaded.
