--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       </div>
       <div class="control">
         <h2>Spacing</h2>
-        <p>Text size: <input id="textsize" type="text" name="textsize" value="16" size="5"></p>
-        <p>Line height: <input id="lineheight" type="text" name="lineheight" value="18" size="5"></p>
-        <p>Padding: <input id="textpadding" type="text" name="textpadding" value="10" size="5"></p>
+        <p>Text size: <input id="textsize" type="range" name="textsize" min="1" max="30" value="16" size="5"></p>
+        <p>Line height: <input id="lineheight" type="range" name="lineheight" min="1" max="40" value="18" size="5"></p>
+        <p>Padding: <input id="textpadding" type="range" name="textpadding" value="10" size="5"></p>
 
       </div>
     </div>
@@ -104,15 +104,15 @@ $(document).ready(function() {
     canvas.css('background-color', e.target.value);
   })
 
-  $('#textsize').keyup(function(e) {
+  $('#textsize').change(function(e) {
     canvas.css('font-size', e.target.value + 'px');
   })
 
-  $('#lineheight').keyup(function(e) {
+  $('#lineheight').change(function(e) {
     canvas.css('line-height', e.target.value + 'px');
   })
 
-  $('#textpadding').keyup(function(e) {
+  $('#textpadding').change(function(e) {
     canvas.css('padding', e.target.value + 'px');
   })
 
