--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@ $(document).ready(function() {
     canvas.css('padding', e.target.value + 'px');
   })
 
-  $('#underline').bind('change', function() {
+  $('#underline').change(function() {
     canvas.css('text-decoration', 'underline');
   })
 
-  $('#smallcaps').bind('change', function() {
+  $('#smallcaps').change(function() {
     canvas.css('font-variant', 'small-caps');
   })
 
-  $('#bold').bind('change', function() {
+  $('#bold').change(function() {
     canvas.css('font-weight', 'bold');
   })
 
