first attempt in  creating input validations

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
       list-style: none;
       padding: 0;
     }
+
+    input.invalid {
+      border: 2px solid red;
+    }
+
+    input.valid {
+      border: 2px solid green;
+    }
+
   </style>
   <script src="https://code.jquery.com/jquery-2.2.3.min.js"
   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
@@ -106,7 +115,14 @@ $(document).ready(function() {
   })
 
   $('#textcolor').keyup(function(e) {
+    var input = $(this);
+    var regExpres =
+    var isValid =
+    if (isValid) {
+      input.removeClass('invalid').addClass('valid');
       canvas.css('color', e.target.value);
+    }
+
   })
 
   $('#bgcolor').keyup(function(e) {
